test/tests/BadAccess.expected
BadAccess.frost:8:16: error: @private field 'frost.core.Object.refCount is not accessible here
BadAccess.frost:9:16: error: @private frost.core.String.UTF8List is not accessible here
BadAccess.frost:10:18: error: @private frost.core.String.init(data:frost.unsafe.Pointer<frost.core.Char8>, length:frost.core.Int, owner:frost.core.String) is not accessible here
BadAccess.frost:11:5: error: @protected method anonymous.Protected.test() is not accessible here
BadAccess.frost:12:5: error: @package frost.collections.MergeSort is not accessible here
5 errors
